--- a/basic-shader.htm
+++ b/basic-shader.htm
@@ -4,11 +4,11 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-<title>Webgl 2.0 Basic Context</title>
+<title>Webgl 2.0 Basic Shader</title>
 </head>
 <body>
-	<h1>Webgl 2.0 Basic Context</h1>
+	<h1>Webgl 2.0 Basic Shader</h1>
     <canvas id="glcanvas" width="800" height="800"></canvas>
 </body>
-<script src="basic-context.js"></script>
+<script src="basic-shader.js"></script>
 </html>
